--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ steps:
   displayName: 'Prepare SonarCloud analysis'
   inputs:
     SonarCloud: 'SonarCloud connection 1'
-    organization: '$(organization)'
+    organization: '$(ptlearningruben)'
     projectKey: '$(projectKey)'
     projectName: '$(projectName)'
     projectVersion: '$(Build.BuildNumber)'
