--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ steps:
 - task: SonarCloudPrepare@1
   displayName: 'Prepare SonarCloud analysis'
   inputs:
-    SonarCloud: 'SonarCloud connection 1'
+    SonarCloud: 'RohCloudSonarConnection'
     organization: '$(ptlearningruben)'
     projectKey: '$(projectKey)'
     projectName: '$(projectName)'
